Removed min-height override. It is no longer needed because we moved overflow-y: hidden to #jqt > * instead of on #jqt itself.

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -53,7 +53,7 @@ body {
 }
 
 #jqt:not(.unfixed) > :not(.unfixed) {
-    min-height: auto;
+    min-height: 100%;
     height: 100%;
     overflow-y: hidden;
 }
